# bluedevil

./: .gitignore  CMakeLists.txt  README  README.md
debian/: changelog  control  lintian-overrides
po/ar/: bluedevil.po  plasma_applet_org.kde.plasma.bluetooth.po
po/ast/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/az/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/bs/: bluedevil.po
po/ca/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/ca@valencia/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/cs/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/da/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/de/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/el/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/en_GB/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/es/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/et/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
po/eu/: bluedevil.po  kcm_bluetooth.po  plasma_applet_org.kde.plasma.bluetooth.po
src/: CMakeLists.txt  bluedevil.notifyrc
src/kcm/: CMakeLists.txt  Sample1.json  bluetooth.cpp  bluetooth.h  bluetoothagent.cpp  bluetoothagent.h  resource.qrc
src/kcm/package/contents/ui/: Bluetooth.qml  BluetoothDetail.qml  Home.qml  JInputDialog.qml  JScanner.qml  ToastView.qml
(+98 files in other folders)
